fixed color on dropdown menu on mobile

--- a/main_app/static/css/recipe-detail.css
+++ b/main_app/static/css/recipe-detail.css
@@ -56,6 +56,10 @@
   flex: 1;
 }
 
+.collection-select {
+  color: var(--color-text);
+}
+
 .title {
   text-align: center;
 }
